<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:id="@+id/relativeLayout_MainActivity"
    android:background="#313131">

    <RelativeLayout
        android:layout_width="220dp"
        android:layout_height="80dp"
        android:id="@+id/relativeLayout_ConnectedStatus"
        android:layout_alignParentTop="true"
        android:layout_marginTop="-2dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/status_offline">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/disconnected"
            android:id="@+id/textView_ConnectedStatus"
            android:layout_marginTop="5dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textColor="#ca0000"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/with"
            android:id="@+id/textView_ConnectedWith"
            android:layout_below="@+id/textView_ConnectedStatus"
            android:layout_marginTop="-5dp"
            android:layout_centerHorizontal="true"
            android:textColor="#ffffff"
            android:visibility="invisible"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="-"
            android:id="@+id/textView_ConnectedServerName"
            android:layout_below="@+id/textView_ConnectedWith"
            android:layout_centerHorizontal="true"
            android:textColor="#ff7f30"
            android:textStyle="bold"
            android:singleLine="true"
            android:visibility="invisible"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"/>
    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/relativeLayout_ConnectedStatus"
        android:layout_above="@+id/button_Search"
        android:background="@drawable/list_view_border_empty"
        android:id="@+id/frameLayout_ServersList"
        android:paddingLeft="18dp"
        android:paddingTop="10dp"
        android:paddingRight="18dp"
        android:paddingBottom="8dp">

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/listView_ServersList"
            android:clickable="true"
            android:textAlignment="center"
            android:choiceMode="singleChoice"/>

    </FrameLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/search_pc"
        android:id="@+id/button_Search"
        android:layout_above="@+id/editText_Port"
        android:layout_marginBottom="10dp"
        android:layout_alignEnd="@+id/button_Connect"
        android:layout_alignStart="@+id/button_Connect"
        android:textAlignment="center"
        android:singleLine="true"
        android:onClick="buttonSearch"
        android:textColor="@drawable/button_text_color"
        android:background="@drawable/button_background"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Port:"
        android:id="@+id/textView_Port"
        android:layout_above="@+id/button_Connect"
        android:layout_alignStart="@+id/button_Search"
        android:layout_marginBottom="30dp"
        android:textColor="#ffffff"
        android:layout_marginLeft="24dp"
        android:focusable="true"
        android:focusableInTouchMode="true"/>

    <pl.tarasienko.remoterewinder.PortEditText
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/editText_Port"
        android:layout_above="@+id/button_Connect"
        android:layout_centerHorizontal="true"
        android:text="6800"
        android:textAlignment="center"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="240dp"
        android:textColor="#ffffff"
        android:background="@drawable/port_background"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/connect_to_pc"
        android:id="@+id/button_Connect"
        android:layout_above="@+id/switch_WorkInBackground"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:onClick="buttonConnect"
        android:textAlignment="center"
        android:singleLine="true"
        android:enabled="false"
        android:textColor="@drawable/button_text_color"
        android:background="@drawable/button_background"/>

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/work_in_background"
        android:id="@+id/switch_WorkInBackground"
        android:onClick="buttonWorkInBackground"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-2dp"
        android:checked="false"
        android:textColor="#ffffff"/>

</RelativeLayout>
